--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,13 @@
     (dragover)="onDragOver($event)"
     (dragleave)="onDragLeave($event)"
   >
-    <span>drop a file here</span>
+    <div>
+      <span *ngIf="isProcessing">processing...</span>
+      <span *ngIf="!isProcessing">drop a file here</span>
+      <p *ngIf="result" [ngClass]="['result', result.type || '']">
+        {{result.message}}
+      </p>
+    </div>
   </div>
   <div id="configuration">
     <div id="config-conversion">
