--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,10 +21,27 @@ $primary-color: tomato;
     display: flex;
     align-items: center;
     justify-content: center;
-    span {
-      color: $gray-color;
-      font-size: 2em;
-      font-weight: bold;
+    &>div {
+      text-align: center;
+      span {
+        color: $gray-color;
+        font-size: 2em;
+        font-weight: bold;
+      }
+      p {
+        white-space: pre-line;
+        font-size: 0.8em;
+        padding: 18px;
+        max-height: 120px;
+        overflow: scroll;
+        &.error {
+          color: lightcoral;
+          text-align: left;
+        }
+        &.success {
+          color: lightseagreen;
+        }
+      }
     }
   }
   #configuration {
