--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,27 +1,8 @@
 <div class="container">
-  <div
-    id="drop-area"
-    (drop)="onDrop($event)"
-    (dragover)="onDragOver($event)"
-    (dragleave)="onDragLeave($event)"
-  >
-    <div>
-      <span *ngIf="isProcessing">processing...</span>
-      <span *ngIf="!isProcessing">drop files here</span>
-      <p *ngIf="result" [ngClass]="['result', result.type || '']">
-        {{result.message}}
-      </p>
-    </div>
-  </div>
-  <div id="configuration">
-    <div id="config-conversion">
-      <button id="conversion">Convert</button>
-      <input type="text" value=".wav" readonly /> → <input type="text" value=".mp3" readonly />
-    </div>
-    <div id="config-directory">
-      <button id="directory-finder-btn" (click)="startDirectorySelect()" >Folder</button>
-      <input type="file" webkitdirectory (change)="onDirectoryChange($event)" />
-      <span>{{outdir}}</span>
-    </div>
-  </div>
+  <app-drop
+    [onDrop]="onDrop.bind(this)"
+  ></app-drop>
+  <app-config
+    [onDirectoryChange]="onDirectoryChange.bind(this)"
+  ></app-config>
 </div>
