--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,24 @@
+// @import "~photonkit/dist/css/photon.min.css";
+// @import "~photonkit/dist/css/photon.css";
 
-$gray-color: gray;
-$primary-color: tomato;
+// $gray-color: gray;
+// $primary-color: tomato;
 
-div.container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  div.body {
-    flex: 1;
-    display: flex;
-  }
-  div.foot {
-    max-height: 240px;
-    background-color: #232323;
-    color: rgba(202,202,202, 1);
-    display: flex;
-    * {
-      transition: all 0.2s;
-    }
-  }
-}
+// div.container {
+//   height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   div.body {
+//     flex: 1;
+//     display: flex;
+//   }
+//   div.foot {
+//     max-height: 240px;
+//     background-color: #232323;
+//     color: rgba(202,202,202, 1);
+//     display: flex;
+//     * {
+//       transition: all 0.2s;
+//     }
+//   }
+// }
