--- a/src/app/components/entries/entries.component.html
+++ b/src/app/components/entries/entries.component.html
@@ -1,5 +1,5 @@
 <div>
-  <table *ngIf="job">
+  <table *ngIf="job" class="table-striped">
     <thead>
       <tr>
         <th>Name</th><th>Status</th>
