--- a/src/app/components/inspect/inspect.component.scss
+++ b/src/app/components/inspect/inspect.component.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   flex: 1;
   div {
-    font-size: 0.4em;
     overflow-y: scroll;
     overflow-x: hidden;
     p {
       margin: 0 8px;
     }
   }
+  background-color: aqua;
 }
