--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
 <div class="container">
-  <div class="head">
-    <!-- NOTHING HERE YET -->
-  </div>
-  <div class="body">
+  <div>
     <app-form></app-form>
-    <app-entries></app-entries>
-  </div>
-  <div class="foot">
     <app-inspect></app-inspect>
+  </div>
+  <div>
+    <app-entries></app-entries>
   </div>
 </div>
