--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -3,6 +3,7 @@
     [onDrop]="onDrop.bind(this)"
   ></app-drop>
   <app-config
+    [outdir]="outdir"
     [onDirectoryChange]="onDirectoryChange.bind(this)"
   ></app-config>
 </div>
