--- a/src/app/components/entries/entries.component.scss
+++ b/src/app/components/entries/entries.component.scss
@@ -1,3 +1,13 @@
 :host {
   flex: 1;
+  table {
+    tbody {
+      tr {
+        td:first-child {
+            width: 40px;
+            text-align: right;
+        }
+      }
+    }
+  }
 }
