--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -1,3 +1,17 @@
+$content-padding: 24px;
+
 :host {
-  background-color: yellow;
+  display: flex;
+  div.container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    >*:first-child {
+      padding: 8px $content-padding;
+      flex: 1;
+    }
+    >*:nth-child(2) {
+      padding: 8px $content-padding;
+    }
+  }
 }
