--- a/src/app/components/form/input/config.component.html
+++ b/src/app/components/form/input/config.component.html
@@ -1,11 +1,22 @@
 <div class="container">
-  <div id="config-directory">
-    <button id="directory-finder-btn" (click)="startDirectorySelect()">Folder</button>
-    <input type="file" webkitdirectory (change)="onDirectoryChange($event)" />
-    <span>{{outdir}}</span>
+  <div class="row">
+    <div class="col">
+      Output Folder
+    </div>
+    <div class="col" (click)="startDirectorySelect()">
+      <span class="icon icon-folder"></span>
+      {{outdir}}
+      <input type="file" webkitdirectory (change)="onDirectoryChange($event)" />
+    </div>
   </div>
-  <div id="config-conversion">
-    <button id="conversion">Convert</button>
-    <input type="text" value=".wav" readonly /> → <input type="text" value=".mp3" readonly />
+  <div class="row">
+    <div class="col">
+      Detect BPM
+    </div>
+    <div class="col">
+      <label>
+        <input type="checkbox">
+      </label>
+    </div>
   </div>
 </div>
