--- a/src/app/components/form/input/config.component.scss
+++ b/src/app/components/form/input/config.component.scss
@@ -1,3 +1,21 @@
 :host {
-  background-color: green;
+  input[type=file] {
+    display: none;
+  }
+
+  .row {
+    display: flex;
+    .col {
+      &:first-child {
+        flex: 1;
+      }
+      &:nth-child(2) {
+        flex: 2;
+        cursor: pointer;
+        label {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
