--- a/src/app/components/inspect/inspect.component.scss
+++ b/src/app/components/inspect/inspect.component.scss
@@ -1,13 +1,15 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
+  overflow-y: scroll;
+  background-color: #171717;
+  color: #d0d0d0;
+  font-family: monaco;
+  font-size: 0.8em;
   div {
     overflow-y: scroll;
-    overflow-x: hidden;
+    height: 100%;
     p {
-      margin: 0 8px;
+      margin: 8px;
+      word-break: break-word;
     }
   }
-  background-color: aqua;
 }
