--- a/src/app/components/form/input/drop.component.scss
+++ b/src/app/components/form/input/drop.component.scss
@@ -5,4 +5,19 @@
     box-sizing: border-box;
     border: dotted 8px lightgray;
   }
+  .processing {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .progress {
+      width: 80px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: loading 1s infinite;
+    }
+  }
 }
