--- a/src/app/components/entries/entries.component.html
+++ b/src/app/components/entries/entries.component.html
@@ -26,7 +26,7 @@
           <span *ngIf="entry.status == 'error'">ERROR ⚠</span>
         </td>
         <td>{{entry.name}}</td>
-        <td>120</td>
+        <td>{{entry.bpm || '?'}}</td>
       </tr>
     </tbody>
   </table>
